plang/testing/logs/false-incorrect/39/program39.p.p
znwJ d (F2ybJ) (MrH) G.


sK (WTFRk) (F) s :- (dy3); zQrsS K (Qbl), (d Z CD), y3Y (It7ZC) I.
u (rs) (zzb Eyh Ttutx KpD Q7SYZ) (EMpV) R :- arSY.
bGjnO (EJ) (iTZ9 (BG)) (cNP (eub1) OyisI CQK) bGZs :- u (yl1) (UZo0), (jTLlF (J0Mv) VeCj8 (kIDy8) UBbc); iV dR (XAQuK) (xJ (x (U) (cXug) (ASHa) (g))) HTv, ye z, xrvgD, fmN rH anmN (zrw (xtng (tNpNF (lbUI z))) (Ea5) C G) jQug, r; ((mcZ6L (vWk (eo)) (SDHde) (V))).

bOt P4c QnPx :- bt0 (HO) (wjmwO uB dT (t0n (Y2gz) (NoRd) (Vkhxx) ah) (tS Von (nKlnm (Y3bm) (DXz4)))) a0, (n25 (sks (QQh) (O7)), (xG29 An sb (Scgcc)); hdQmf (WW) (ZCFG); x x8P (Fk)).


eH6cX je (uI2P (S) (sX (KVRHy)) (p h0ZpZ zGyu2) t) :- ((iAk7 (Uks8e) ieEtO (j8Xfq I1vp Taa (x ptbt1 z6wD (Xx)) dm) (b3d); wJ JpeW7 tUK (W), jt1vT; a)).

nwe (c (WhT) pjapF (eUwV (t (YOk))) (im7 mV)) (ARXC).

uPENK.

ld X (De5) :- (d NNNJN (Ed9y) hDQDm); bWN1, (leJh N0), pVGCi hg (sY (ZhQ8G) (t1zv7)) JAs23 gORA, cO, ykLk (ROP) (eGyy w (HRWuk) (cVa a6V1 F)) (Ypb); n nZ; pU A4v (eHYvS (SqI4k)) GvdJk uj5l, v; pQRMB Qcd7 (r0Gdh (i (Ds) (Pb1) qfL Q4G) (Mbb)); (q (MK0Ji) (d46 (XzA) w69q lqDbH (EKgKK)) U); su j X6jlW oDek Wnjad, vLP, (r5V (mEPAF) vZHHU lOabI x), r7 (VAA1) x; efmP (Sd) Z (I) ikv; v3Yq AqguU (r (aBxvb) (DZ) p6 g3g6A) FbHDl; (pOLK).
oRBNN (Dzjf4) (GmL) rWf.
m939q h (BxUaT) (nr3) :- (vcGiI; qMU kvv (XyOq); ld; (roD tKEtI; lj)); u (aO) nI5r (IdRK) (fwHs (ucSl eXy cCzp Z)).
? (hjUp0, n90 nWWL p (f ukOJ (D) gIUV) k), (fq2, pcn2f (uIB)); i (z4 (REKm) tlXY (Qjw7)) (TeET), (yL (NTsT) (Z0) (Xt) (Yxg)), dmek (OIXcc) vaG9O jLMB7, d Kqz Iw8BB; bbQr gGNF (idW (x9l (d z (X)) b2Hib) FsQ Fi (Qda2)) (zwVH), ((mV (BHiCv) DwU OO9); s (D) MMJ0; ghuDF (XMH3W) (fKUT (m) n4) (LqA) T4IKk).